<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    tools:context=".SignInFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/img_sing_in_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/value_37dp"
            android:layout_marginBottom="@dimen/value_25dp"
            android:contentDescription="@string/logo_image"
            android:src="@drawable/ic_app_logo" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_et_sign_in_name"
            style="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_sing_in_logo"
            android:layout_marginStart="@dimen/value_15dp"
            android:layout_marginEnd="@dimen/value_15dp"
            android:layout_marginBottom="@dimen/value_10dp"
            app:hintTextAppearance="@style/EditTextLabel">

            <EditText
                android:id="@+id/et_sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:textColor="@color/material_color_black_87_percent"
                app:backgroundTint="@color/colorAccent"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/container_et_sign_in_password"
            style="@style/EditTextHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_et_sign_in_name"
            android:layout_marginStart="@dimen/value_15dp"
            android:layout_marginTop="@dimen/value_5dp"
            android:layout_marginEnd="@dimen/value_15dp"
            android:layout_marginBottom="@dimen/value_15dp"
            app:hintTextAppearance="@style/EditTextLabel">

            <EditText
                android:id="@+id/et_sign_in_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/material_color_black_87_percent"
                app:backgroundTint="@color/colorAccent"
                tools:ignore="Autofill" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_sing_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/value_50dp"
            android:layout_below="@id/container_et_sign_in_password"
            android:layout_marginStart="@dimen/value_90dp"
            android:layout_marginTop="@dimen/value_10dp"
            android:layout_marginEnd="@dimen/value_90dp"
            android:background="@drawable/btn_ripple_accent_color"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="@dimen/value_16sp" />

        <LinearLayout
            android:id="@+id/container_social_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sing_in"
            android:layout_marginTop="@dimen/value_10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btn_fb"
                android:layout_width="@dimen/value_70dp"
                android:layout_height="@dimen/value_70dp"
                android:layout_marginEnd="@dimen/value_10dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/facebook_logo" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btn_google"
                android:layout_width="@dimen/value_70dp"
                android:layout_height="@dimen/value_70dp"
                android:layout_marginStart="@dimen/value_10dp"
                android:layout_marginEnd="@dimen/value_10dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/google_logo" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/btn_twitter"
                android:layout_width="@dimen/value_70dp"
                android:layout_height="@dimen/value_70dp"
                android:layout_marginStart="@dimen/value_10dp"
                android:layout_marginEnd="@dimen/value_10dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/twitter_logo" />
        </LinearLayout>

        <TextView
            android:id="@+id/goToSignUpFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/container_social_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/value_15dp"
            android:layout_marginBottom="@dimen/value_10dp"
            android:text="@string/txt_sign_up_now"
            android:textAlignment="center" />

    </RelativeLayout>
</ScrollView>